--- a/测试/接口测试.md
+++ b/测试/接口测试.md
@@ -1,1 +1,87 @@
 #service
+
+## 环境集成
+mocha
+
+## 安装依赖
+```bash
+npm install mocha --save-dev
+# 用于输出报表
+npm install mochawesome --save-dev
+# 请求库
+npm install axios --save
+# 服务器
+npm install express --save
+
+```
+
+## 使用
+
+1. 新建service文件夹用于存放需要测试的接口文件， service/router.spec.js :
+```js
+  const axios = require("axios");
+  //定义一个测试用例
+  describe("接口测试",function(){
+      it("test",function(done){
+          axios.get("http://localhost:3000/test")
+          .then(function(response){
+              if(response.data.result == "Hello World!"){
+                  done();
+              }else{
+                  done(new Error("请求接口数据出错"))
+              }
+          })
+          .catch(function(error){
+              done(error);
+          })
+      });
+  });
+
+```
+2. 新建mochaRunner.js文件用于mocha执行测试
+```js
+  const Mocha = require("mocha");
+  const mocha = new Mocha({
+    reporter: 'mochawesome'
+  });
+  mocha.addFile('./service/router.spec.js');
+  mocha.run(function(errLen) {
+    if(errLen === 0) {
+      process.exit(); //没有错误，正常退出
+    } else {
+      console.log('错误长度', errLen);
+      process.exit(1); //异常退出
+    }
+    
+  })
+```
+3. 配置mocha启动脚本
+
+```json
+  {
+    "scripts": {
+        "service": "node ./mochaRunner",
+    }
+  }
+```
+
+4. 新建一个服务，模拟接口环境 testServer.js :
+```js
+  const express = require('express')
+  const app = express()
+  //定义一个/test 接口 用于演示上述用例
+  app.get('/test', (req, res) => res.send({
+      result:'Hello World!'
+  }))
+
+  app.listen(3000, () => console.log('Example app listening on port 3000!'))
+```
+```bash
+  #启动服务 默认端口 3000
+  node testServer.js
+```
+5. 启动mocha
+```bash
+  npm run service
+```
+
