--- a/测试/测试.md
+++ b/测试/测试.md
@@ -29,9 +29,9 @@ npm install -g karma-cli
 
     1. 测试框架： jasmine
     2. 是否使用Require.js： no
-    3. 浏览器： PhantomJS
-    4. 测试文件目录： 不设置
-    5. 排除特定文件：不设置
+    3. 浏览器： PhantomJS (使用时需要安装该依赖)
+    4. 测试文件目录： 不设置，回车跳过
+    5. 排除特定文件：不设置，回车跳过
     6. 是否开启文件变更监听： no
 
 4. 初始化完成后移除initkarma脚本(已经没用了)，并修改配置文件 karma.conf.js 
@@ -46,6 +46,12 @@ npm install -g karma-cli
 ```
 
 ## [单元测试](./单元测试.md)
+
+## [端对端测试](./端对端测试.md)
+
+## [视图测试](./视图测试.md)
+
+## [接口测试](./接口测试.md)
 
 ## 性能测试
 
