--- a/测试/端对端测试.md
+++ b/测试/端对端测试.md
@@ -63,6 +63,9 @@ npm install puppeteer rize --save-dev
 ### 使用
 感受一个来自文档的例子：e2e/github.spec.js
 ```js
+const Rize = require('rize');
+const rize = new Rize({ headless: false }); //默认开启无头模式，此处选择关闭
+
 rize
   .goto('https://github.com/')
   .type('input.header-search-input', 'node')
