--- a/测试/接口测试.md
+++ b/测试/接口测试.md
@@ -42,7 +42,10 @@ npm install express --save
 ```js
   const Mocha = require("mocha");
   const mocha = new Mocha({
-    reporter: 'mochawesome'
+    reporter: 'mochawesome',
+    reporterOptions:{
+      reportDir:"./docs/mochawesome-report" //报告输出路径
+    }
   });
   mocha.addFile('./service/router.spec.js');
   mocha.run(function(errLen) {
