--- a/测试/测试.md
+++ b/测试/测试.md
@@ -45,6 +45,20 @@ npm install -g karma-cli
   }  
 ```
 
+5. 集成多种测试命令
+
+```bash
+npm install npm-run-all --save-dev
+```
+parallel： 并行的
+```js
+{
+  "scripts": {
+    "test": "npm-run-all --parallel <some script>",
+  }
+}
+```
+
 ## [单元测试](./单元测试.md)
 
 ## [端对端测试](./端对端测试.md)
