--- a/测验题/20190117.md
+++ b/测验题/20190117.md
@@ -195,5 +195,98 @@ mergePromise([ajax1, ajax2, ajax3]).then(data => {
 // 执行结果为： 1 2 3 done [1,2,3] 
 
 ```
-https://segmentfault.com/a/1190000016832285?utm_source=tag-newest
+**解析**
+
+参考 ： https://segmentfault.com/a/1190000016832285?utm_source=tag-newest
+
+### 例8
+
+```html 
+    <button id="test"></button>
+```
+
+```js
+    $('#test').click(function(argument) {
+        console.log(1);
+    });
+    setTimeout(function() {
+        console.log(2);
+    }, 0);
+    while (true) {
+        console.log(Math.random());
+    }
+
+```
+**解析**
+
+1. 点击按钮无反应 因为被while死循环堵截了同步栈，永远不能到异步队列
+2. 如何解决？ 考虑模拟多线程。 
+    1. 库： Concurrent.Thread.js
+    2. WebWork：将繁杂业务独立出去，在后台运行，并通过相关api传递消息和返回。
+
+参考： https://www.cnblogs.com/woodk/articles/5199536.html
+
+
+### 例9 ES5 实现 ES6 Promise
+
+```js
+   //PromiseA+ 规范
+
+```
+**解析**
+
+参考: 
+https://www.jianshu.com/p/fe42b01ef076
+https://blog.csdn.net/chenyidong521/article/details/80245140
+
+
+
+
+### 例9 ES5 实现 ES6 Promise
+
+```js
+var s = [];
+var arr = s;
+for (var i = 0; i < 3; i++) {
+    var pusher = {
+        value: "item" + i
+    }, tmp;
+    if (i !== 2) {
+        tmp = [];
+        pusher.children = tmp; // children指向tmp []
+    }
+    arr.push(pusher);
+    arr = tmp; // arr与上一次的children 都指向tmp []
+}
+
+console.log(s[0]);
+
+```
+**解析**
+
+模拟指针移动
+
+---
+
+### 例10
+
+```js
+
+var Container = function(x) {
+    this.__value = x;
+}
+Container.of = x => new Container(x);
+Container.prototype.map = function(f){
+    return Container.of(f(this.__value))  // of 函子 生成新的实例  函子是独立的  
+}
+Container.of(3)
+.map(x => x + 1)
+.map(x => 'Result is ' + x);
+
+```
+
+**解析**
+
+
+
 
