--- a/测试/单元测试.md
+++ b/测试/单元测试.md
@@ -3,7 +3,7 @@
 ## 环境集成
 Karma + jasmine + phantom
 
-phantom已经有了更好的替代品
+phantom已经有了更好的替代品(rize),这里用作示例
 
 ## 安装依赖
 
@@ -55,9 +55,9 @@ npm install phantom --save-dev
 ```js
     //修改karma配置文件 karma.conf.js
     {
-        reporters: ['progress', 'coverage'], //默认['progress'] 增加覆盖率报表
+        reporters: ['progress', 'coverage'], //默认['progress'] 增加覆盖率报表'coverage'
         preprocessors: {
-            'unit/**/*.js': ['coverage'] // 覆盖率统计的文件目录
+            'unit/**/*.js': ['coverage'] // 需要做覆盖率统计的文件目录
         },
         // 配置覆盖率报表输出位置
         coverageReporter: {
