--- a/测试/接口测试.md
+++ b/测试/接口测试.md
@@ -8,6 +8,8 @@ mocha
 npm install mocha --save-dev
 # 用于输出报表
 npm install mochawesome --save-dev
+
+# 以下库用于演示
 # 请求库
 npm install axios --save
 # 服务器
@@ -20,7 +22,7 @@ npm install express --save
 1. 新建service文件夹用于存放需要测试的接口文件， service/router.spec.js :
 ```js
   const axios = require("axios");
-  //定义一个测试用例
+  //示例使用基础的express服务，并定义一个测试用例
   describe("接口测试",function(){
       it("test",function(done){
           axios.get("http://localhost:3000/test")
