--- a/测试/测试.md
+++ b/测试/测试.md
@@ -25,7 +25,7 @@ npm install -g karma-cli
 }
  
 ```
-3. 按照指引，依次选择，完成后生成karma配置文件 karma.conf.js。 此处示例选择如下：
+3. 按照指引，依次选择，完成后生成karma配置文件 karma.conf.js。 示例选择如下：
 
     1. 测试框架： jasmine
     2. 是否使用Require.js： no
@@ -34,11 +34,11 @@ npm install -g karma-cli
     5. 排除特定文件：不设置，回车跳过
     6. 是否开启文件变更监听： no
 
-4. 初始化完成后移除initkarma脚本(已经没用了)，并修改配置文件 karma.conf.js 
+4. 初始化完成后可以移除initkarma脚本(已经没用了)，并修改配置文件 karma.conf.js 
 ```js
   {
     singleRun: true, // 独立运行
-    files: [ //根据实际情况，配置karma的处理的文件
+    files: [ //根据实际情况，配置需要karma处理的文件
         "./unit/**/*.js", 
         "./unit/**/*.spec.js"
     ]
@@ -87,7 +87,7 @@ CSRF
 
 
 
-sekenium-webdriver
+selenium-webdriver
 
 
 ng： protractor  selenium-standalone
