--- a/测试/端对端测试.md
+++ b/测试/端对端测试.md
@@ -3,8 +3,9 @@
 ## 环境集成
 1. selenium-webdriver 
 2. [rize](https://rize.js.org/zh-CN/) + puppeteer [传送门](#使用rize)
-3. F2etest + ui-recorder //没例子 阿里的，自己玩
-## 使用karma
+3. F2etest + ui-recorder // **另一种比较优秀神奇的方式** 官网有对应视频演示示例,阿里出品
+
+
 ### 安装依赖 [selenium-webdriver](https://www.npmjs.com/package/selenium-webdriver)
 ```bash
 npm install selenium-webdriver --save-dev 
@@ -36,21 +37,12 @@ npm install selenium-webdriver --save-dev
 ```json
     {
         "scripts": {
-            "e2e": "node ./e2e/*.spec.js", //windows下无法识别该路径写法
+            "e2e": "node ./e2e/*.spec.js", //执行的测试用例脚本
         }
     }
 ```
 
-3. 创建测试用例 index.spec.js
-```js
-describe('测试fn',function() {
-  it('用例1', function() {
-      expect(test(1)).tobe(2)
-  })
-})
-```
-
-4. 执行启动脚本 npm run unit
+3. 执行 npm run e2e
 
 ---
 
@@ -61,7 +53,7 @@ npm install puppeteer rize --save-dev
 ```
 
 ### 使用
-感受一个来自文档的例子：e2e/github.spec.js
+感受一个来自官方文档的例子：e2e/github.spec.js
 ```js
 const Rize = require('rize');
 const rize = new Rize({ headless: false }); //默认开启无头模式，此处选择关闭
