--- a/测试/视图测试.md
+++ b/测试/视图测试.md
@@ -1,7 +1,7 @@
 #UI
 ## 环境集成
 1. [BackstopJS](https://www.npmjs.com/package/backstopjs)
-2. phantomCSS //无示例
+2. phantomCSS //css测试 暂无示例
 
 ## 安装依赖 并初始化
 ```bash
@@ -45,7 +45,7 @@ paths.bitmaps_reference: 参考图片位置
 ```
 
 
-至此 从单元测试到端对端测试到视图测试，可以合起来
+至此，从单元测试到端对端测试到视图测试，可以合起来。
 ```json
 {
   "script": {
@@ -54,5 +54,17 @@ paths.bitmaps_reference: 参考图片位置
 }
 
 ```
+这样写好像不是很优秀，使用 npm-run-all 并行触发
+```bash
+  npm install npm-run-all --save-dev
+```
+```json
+{
+  "script": {
+    "test": "npm-run-all --parallel unit  e2e  ui  service"
+  }
+}
+```
+
 
 
