--- a/linux/免密登陆.md
+++ b/linux/免密登陆.md
@@ -18,19 +18,65 @@
 ```bash
  ssh-keygen -t rsa -C "shownoso" -f "shownoso_rsa"
  # 出现钥匙对密码提示 直接回车跳过
- # 执行完毕后 当前目录会有 公钥和私钥
+ # 执行完毕后 当前目录会有 公钥shownoso_rsa.pub和私钥shownoso_rsa
 ```
 2. 上传配置公钥
 上传至服务器对应账号的home/路径下（root用户直接就是/root）的.ssh/中
 ```bash
-ssh-copy-id-i "公钥名" root@服务器ip或域名:/root/.ssh/
+# 将key写到远程机器的 ~/.ssh/authorized_key文件中
+ssh-copy-id -i shownoso_rsa.pub root@服务器ip或域名
+#  :/root/.ssh/  具体路径指定
+
 ls -a 
 cd .ssh
 # 配置访问权限
- chmod 600
+ chmod 600 shownoso_rsa.pub
 ```
 3. 配置本地私钥
 
 
 4. 免密登陆功能的本地配置文件
 创建/编辑 config
+```bash
+# 多主机配置
+Host gateway-produce
+HostName IP或绑定的域名
+Port 22
+Host node-produce
+HostName IP或绑定的域名
+Port 22
+Host java-produce
+HostName IP或绑定的域名
+Port 22
+
+Host *-produce
+User root
+IdentityFile ~/.ssh/produce_key_rsa
+Protocol 2
+Compression yes
+ServerAliveInterval 60
+ServerAliveCountMax 20
+LogLevel INFO
+
+#单主机配置
+Host evil-cloud
+User root
+HostName IP或绑定的域名
+IdentityFile ~/.ssh/evilboy_rsa
+Protocol 2
+Compression yes
+ServerAliveInterval 60
+ServerAliveCountMax 20
+LogLevel INFO
+
+#单主机配置
+Host git.yideng.site
+User git
+IdentityFile ~/.ssh/evilboy_rsa
+Protocol 2
+Compression yes
+ServerAliveInterval 60
+ServerAliveCountMax 20
+LogLevel INFO
+
+```
