--- a/javascript/继承.md
+++ b/javascript/继承.md
@@ -9,10 +9,10 @@ var Human = function(name) {
 }
 
 Human.prototype.sayName = function() {
-    console.log('I am ' + this.name);
+    console.log('我是' + this.name);
 }
 
-//继承
+
 //1.继承属性 过程类似实例化
 var Male = function(name) {
     Human.call(this, name);
@@ -20,21 +20,23 @@ var Male = function(name) {
 //2.建立原型，使用Object.create创建父类原型副本
 var __prototype = Object.create(Human.prototype); 
 //3.修正构造函数为子类
-__prototype.constructor = Male; //构造函数即"本身" 为啥修复？ 为了使用constructor属性来测试对象的类型
+//构造函数即"本身"。使用constructor属性来测试对象的类型
+__prototype.constructor = Male; 
 //4.完成原型的继承
 Male.prototype = __prototype;
 
-var man = new Male('小鸡鸡');
-console.log(man);
-man.sayName();
-console.log(man.constructor === Male) //true 构造函数被修复了 所以相等了
+var man = new Male('shown');
+man.sayName(); // 我是shown
+man.constructor === Male; //true
 
 ```
 
 **小结**
 
-1. 为什么不使用Human.prototype作为子类的原型？ 因为子类原型修改会影响父类
-2. 为什么不使用new Human() 作为子类的原型？ 默认的构造函数是函数自身，会执行2次父类的构造函数(Human)。
+1. 为什么不使用Human.prototype作为子类的原型？  
+因为子类原型修改会影响父类
+2. 为什么不使用new Human() 作为子类的原型？ 
+默认的构造函数是函数自身，会执行2次父类的构造函数(Human)。
 
 
 ### ES6 class
