--- a/javascript/继承.md
+++ b/javascript/继承.md
@@ -1,6 +1,4 @@
-## 继承
-
-### 混合式继承
+## 混合式继承
 ```js
 
 var Human = function(name) {
@@ -39,7 +37,7 @@ man.constructor === Male; //true
 默认的构造函数是函数自身，会执行2次父类的构造函数(Human)。
 
 
-### ES6 class
+### ES6 class extends 继承
 ```js
 class Human {
   constructor() {
