update exc ctx & scope chain

--- a/javascript/执行上下文与作用域链.md
+++ b/javascript/执行上下文与作用域链.md
@@ -20,7 +20,7 @@
 1. 每一个执行上下文都会分配一个变量对象
 2. 变量对象由**变量**和**函数声明**构成(函数声明而非函数表达式)
 3. 特别的，在函数上下文条件下，参数列表(arguments)也会被加入到变量对象中
-    + 当函数被激活，arguments将初始化一个**活动对象(Activation object)**并且分配给执行上下文。随后，它被当做变量对象用于变量初始化： VO = [AO, ...Variable, ...Function-declaration]。
+    + 当函数被**激活**，arguments将初始化一个**活动对象(Activation object)**并且分配给执行上下文。随后，它被当做变量对象用于变量初始化： VO = [AO, ...Variable, ...Function-declaration]。
 
 
 ### 作用域
@@ -32,8 +32,8 @@ JavaScript采用词法作用域(lexical scoping)，也就是静态作用域。
 2. 动态作用域：**函数调用**时决定
 
 ### 作用域链
-1. 变量查找的范围
-2. 由多个执行上下文的**变量对象构成的链表**
+1. 变量查找的范围 
+2. 由多个执行上下文的**变量对象构成的链表** (上下文独立，同名不覆盖)
 3. 当前执行上下文的作用域链由当前环境的变量对象及父级(词法)上下文的作用域链构成：current-scope = [VO, parentScopeChain]。
 
 
@@ -58,18 +58,121 @@ function foo() {
 foo();
 ```
 1. 执行全局代码，创建全局上下文并压入执行上下文栈
+```
+ECStack = [
+    globalContext
+];
+```
 2. 全局上下文初始化，函数bar和函数foo被创建，并保存当前上下文(全局)作用域链到内部属性[[scope]]。
+```
+globalContext = {
+    VO: [global],
+    Scope: [globalContext.VO],
+    this: globalContext.VO
+}
+
+bar.[[scope]] = [
+    globalContext.VO
+];
+
+foo.[[scope]] = [
+    globalContext.VO
+];
+```
 3. 执行foo，创建foo的函数执行上下文并压入执行上下文栈
+```
+ECStack = [
+    fooContext,
+    globalContext
+];
+```
 4. foo函数执行上下文初始化
     - 复制函数内部属性[[scope]]并以此创建该执行上下文的作用域链
     - 使用参数列表arguments创建活动对象AO
     - AO被当做变量对象VO用于变量初始化并将变量对象压入作用域链顶端
         * 函数baz被创建，同时将当前执行上下文的作用域链保存到内部属性[[scope]]
-5. 执行bar，创建bar的函数执行上下文并压入执行上下文栈
-6. bar函数执行上下文初始化,此时bar的作用域链为全局上下文的作用域链，因此执行完成后结果 在全局中找到a为1，弹出bar的上下文
+```
+fooContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+        a: undefined,
+        baz: reference to function baz(){}
+    },
+    Scope: [AO, globalContext.VO],
+    this: undefined
+}
+
+baz.[[scope]] = [
+    fooContext.Scope
+];
+```
+**foo内代码顺序执行，foo.VO改变，foo上下文中的a被赋值为2**
+5. 执行到bar，创建bar的函数执行上下文并压入执行上下文栈
+```
+ECStack = [
+    barContext,
+    fooContext,
+    globalContext
+];
+```
+6. bar函数执行上下文初始化,复制函数内部属性[[scope]]并以此创建该执行上下文的作用域链，因此执行完成后结果 在全局中找到a为1，弹出bar的上下文
+```
+//上下文初始化  注意：bar.[[scope]] = [globalContext.VO];
+barContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+    },
+    Scope: [AO, globalContext.VO], 
+    this: undefined
+}
+
+//执行 在globalContext.VO中找到a为1
+//执行完毕 弹出上下文
+ECStack = [
+    fooContext,
+    globalContext
+];
+```
 7. 执行baz，创建baz的函数执行上下文并压入执行上下文栈
-8. baz函数执行上下文初始化,此时baz的作用域链为[bazAO,fooVO,globalVO], 因此执行完成后结果 在fooVO中找到a为2，弹出baz的上下文
+```
+ECStack = [
+    bazContext,
+    fooContext,
+    globalContext
+];
+```
+8. bar函数执行上下文初始化,复制函数内部属性[[scope]]并以此创建该执行上下文的作用域链，因此执行完成后结果 在foo.VO中找到a为2，弹出baz的上下文
+```
+//上下文初始化  注意：baz.[[scope]] = [fooContext.Scope];
+// [fooContext.Scope] = [foo.VO, globalContext.VO];
+bazContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+    },
+    Scope: [AO, foo.VO, globalContext.VO], 
+    this: undefined
+}
+
+//执行 在foo.VO中找到a为2
+//执行完毕 弹出上下文
+ECStack = [
+    fooContext,
+    globalContext
+];
+```
+
 9. foo执行结束 弹出foo的执行上下文
+```
+ECStack = [
+    globalContext
+];
+```
 
 
 
