--- a/javascript/执行上下文与作用域链.md
+++ b/javascript/执行上下文与作用域链.md
@@ -20,7 +20,7 @@
 1. 每一个执行上下文都会分配一个变量对象
 2. 变量对象由**变量**和**函数声明**构成(函数声明而非函数表达式)
 3. 特别的，在函数上下文条件下，参数列表(arguments)也会被加入到变量对象中
-    + 当函数被**激活**，arguments将初始化一个**活动对象(Activation object)**并且分配给执行上下文。随后，它被当做变量对象用于变量初始化： VO = [AO, ...Variable, ...Function-declaration]。
+    + 当函数被**激活**，arguments将初始化一个**活动对象**(Activation object, AO)并且分配给执行上下文。随后，它被当做变量对象用于变量初始化： VO = [AO, ...Variable, ...Function-declaration]。
 
 
 ### 作用域
@@ -33,12 +33,12 @@ JavaScript采用词法作用域(lexical scoping)，也就是静态作用域。
 
 ### 作用域链
 1. 变量查找的范围 
-2. 由多个执行上下文的**变量对象构成的链表** (上下文独立，同名不覆盖)
+2. 由多个执行上下文的**变量对象构成的链表**
 3. 当前执行上下文的作用域链由当前环境的变量对象及父级(词法)上下文的作用域链构成：current-scope = [VO, parentScopeChain]。
 
 
 ### 流程解释
-```
+```js
 var a = 1;
 
 function bar() {
@@ -108,7 +108,8 @@ baz.[[scope]] = [
     fooContext.Scope
 ];
 ```
-**foo内代码顺序执行，foo.VO改变，foo上下文中的a被赋值为2**
+**foo内代码顺序执行，foo.VO改变，foo上下文中的a被赋值为2**    
+
 5. 执行到bar，创建bar的函数执行上下文并压入执行上下文栈
 ```
 ECStack = [
