--- a/javascript/继承.md
+++ b/javascript/继承.md
@@ -55,9 +55,12 @@ class Male extends Human {
   setName() {
     this.name = 1;
   }
-  getName() {
+  
+  // 实验标准： 实例属性 等价于 this.getName = 
+  getName = () => {
     console.log(this.name)
   }
+  _property = 666
 }
 
 ```
@@ -67,5 +70,3 @@ class Male extends Human {
 1. super作为函数调用时，代表父类的构造函数
 2. super作为对象调用时，代表的是子类的this
 3. 结论2可以通过babel转换的代码中看到，super()执行后返回了子类this。
-
-### 对象关联
