--- a/javascript/执行上下文与作用域链.md
+++ b/javascript/执行上下文与作用域链.md
@@ -65,6 +65,7 @@ JavaScript采用词法作用域(lexical scoping)，即静态作用域。
 创建当前 EC 的 this: ObjectThis || global || window || undefined
 
 
+
 ### 执行
 完成了执行上下文的一系列"初始化工作"，下面开始代码执行。
 1. js的语法顺序是中缀的，即赋值操作在中间；
@@ -79,8 +80,13 @@ JavaScript采用词法作用域(lexical scoping)，即静态作用域。
 ### [闭包](./闭包.md)。
 
 
+### 小结
+1. this: 动态绑定
+2. 变量提升: AO
+3. 作用域链: [[Scopes]]: [AO,ParentContext.VO,GlobalContext.VO]
+4. 闭包： Closure(outside) ==> [[Scopes]]
 
-### 流程解释
+### 流程
 ```js
 var a = 1;
 
