--- a/linux/免密登陆.md
+++ b/linux/免密登陆.md
@@ -14,7 +14,7 @@
 
 ### 步骤
 
-1. 生成密钥对
+1. 生成密钥对 ~/.ssh
 ```bash
  ssh-keygen -t rsa -C "shownoso" -f "shownoso_rsa"
  # 出现钥匙对密码提示 直接回车跳过
@@ -31,12 +31,14 @@ ls -a
 cd .ssh
 # 配置访问权限
  chmod 600 shownoso_rsa.pub
+ # or
+ chmod 600 authorized_keys
 ```
 3. 配置本地私钥
-
+私钥位置：~/.ssh
 
 4. 免密登陆功能的本地配置文件
-创建/编辑 config
+~/.ssh 下 创建/编辑 config
 ```bash
 # 多主机配置
 Host gateway-produce
@@ -59,20 +61,10 @@ ServerAliveCountMax 20
 LogLevel INFO
 
 #单主机配置
-Host evil-cloud
+Host [hostname]
 User root
-HostName IP或绑定的域名
-IdentityFile ~/.ssh/evilboy_rsa
-Protocol 2
-Compression yes
-ServerAliveInterval 60
-ServerAliveCountMax 20
-LogLevel INFO
-
-#单主机配置
-Host git.yideng.site
-User git
-IdentityFile ~/.ssh/evilboy_rsa
+HostName [IP或绑定的域名]
+IdentityFile ~/.ssh/shownoso_rsa
 Protocol 2
 Compression yes
 ServerAliveInterval 60
