--- a/nginx/反向代理.md
+++ b/nginx/反向代理.md
@@ -1,5 +1,6 @@
 ## 反向代理
-
+1. 安全性：正向代理的客户端能够在隐藏自身信息的同时访问任意网站，这个给网络安全代理了极大的威胁。因此，我们必须把服务器保护起来，使用反向代理客户端用户只能通过外来网来访问代理服务器，并且用户并不知道自己访问的真实服务器是那一台，可以很好的提供安全保护。
+2. 功能性：反向代理的主要用途是为多个服务器提供负债均衡、缓存等功能。负载均衡就是一个网站的内容被部署在若干服务器上，可以把这些机子看成一个集群，那Nginx可以将接收到的客户端请求“均匀地”分配到这个集群中所有的服务器上，从而实现服务器压力的平均分配，也叫负载均衡。
 
 ### 用途
 * 加密和SSL加速 
@@ -9,3 +10,11 @@
 * 减速上传 
 * 安全 
 * 外网发布
+
+### 常用指令
+
+- proxy_set_header :在将客户端请求发送给后端服务器之前，更改来自客户端的请求头信息。
+- proxy_connect_timeout:配置Nginx与后端代理服务器尝试建立连接的超时时间。
+- proxy_read_timeout : 配置Nginx向后端服务器组发出read请求后，等待相应的超时时间。
+- proxy_send_timeout：配置Nginx向后端服务器组发出write请求后，等待相应的超时时间。
+- proxy_redirect :用于修改后端服务器返回的响应头中的Location和Refresh。
