--- a/css/layout/两侧固定的三列布局.md
+++ b/css/layout/两侧固定的三列布局.md
@@ -15,10 +15,32 @@
 5. 在容器中清除浮动
 
 
-### 对比
+#### 圣杯和双飞翼的对比
 1. 相同点
-  - 主内容块放置在文档流最前，优先加载
+  - 主内容块放置在文档流最前，`优先加载`，这也是这两种布局最大的优点
   - 都基于浮动
 2. 不同
   - 对于左右两侧预留位置的方式不同，圣杯采用容器内边距实现，双飞翼则由主内容中实际内容区域让出外边距实现
   - 外边距不改变[盒模型](../box-model/盒模型.md)
+
+
+### flex-最佳体验
+1. 设置容器为flex容器，
+2. 固定左右两侧（设置flex-basis 或固定的宽度值 ）且不伸缩： `flex: 0 0 100px`
+3. 主内容占据全部布局空白（flex-grow）： `flex: 1`
+
+### 通过绝对定位
+1. 容器相对定位
+2. 主内容不动，左右两侧分别绝对定位
+
+### 使用calc
+因为有计算所以在性能上比其它方式要差一些，不过挺好用，很简洁~
+```css
+.middle {
+  width: calc(100% - 200px);
+}
+```
+
+
+
+
