--- a/javascript/执行上下文与作用域链.md
+++ b/javascript/执行上下文与作用域链.md
@@ -1,7 +1,7 @@
 ### 可执的行代码类型
 1. 全局代码
 2. 函数
-3. eval：（别用，有性能和安全问题，另外还有new Function();） 
+3. eval：（尽量别用，有性能和安全问题，另外还有new Function();） 
 
 ### 执行上下文栈(Execution Context Stack)
 1. 管理一系列执行上下文的数据结构, 最底部为全局EC
@@ -37,10 +37,10 @@
 
 ### 活动对象(Activation Object)
 当函数被**激活（执行）**，arguments将初始化一个**活动对象**并且分配给执行上下文。随后，它被当做变量对象用于变量初始化： VO = [AO, ...VariableDeclaration, ...FunctionDeclaration]。
-+ 同名声明将覆盖， 函数优先
-+ let、const仅提升声明，未初始化
-+ 不加 var 的且上下文没有该变量赋值操作会（隐式地）声明成全局变量（global/window）
-+ 需要注意函数执行时是否在严格模式
+- 同名声明将覆盖， 函数优先
+- let、const仅提升声明，未初始化
+- 不加 var 的且上下文没有该变量赋值操作会（隐式地）声明成全局变量（global/window）
+- 需要注意函数执行时是否在严格模式
    
 
 ### 作用域
