--- a/javascript/闭包.md
+++ b/javascript/闭包.md
@@ -2,7 +2,7 @@
 1. 闭包是函数和声明该函数的词法环境的组合。
 2. 通常闭包是指那些能够访问自由变量的函数。
 3. 产生：当函数（假设函数名为outside）执行上下文被创建后，对内部所有函数进行扫描，发现内部有函数（一个或多个，假设函数名（或将匿名函数指代）为Inner）对当前作用域内变量有存在引用的情况，那么将这些所有被引用到的变量组合成一个叫做闭包的引用，?压入inner等使用变量的函数的[[Scopes]]或者说标记到该函数上?存疑。
- - 火狐： 如果函数直接在Outside内执行，不对未引用变量进行优化。函数不在Outside内执行时，火狐会进行引用变量优化。
+ - 火狐： 如果函数直接在Outside内执行，那么将不对未引用变量进行优化。函数不在Outside内执行时，火狐会进行引用变量优化。
  - 谷歌： 表现为创建一个被Inner使用的Closure (Outside)
 
  ```js
