--- a/javascript/执行上下文与作用域链.md
+++ b/javascript/执行上下文与作用域链.md
@@ -48,15 +48,20 @@ JavaScript采用词法作用域(lexical scoping)，即静态作用域。
 1. 静态作用域：**函数定义**时决定
 2. 动态作用域：**函数调用**时决定
 
+词法作用域就是指作用域是由代码中函数声明的位置来决定的，所以词法作用域是静态的作用域，通过它就能够预测代码在执行过程中如何查找标识符。
+
 #### 作用域级别
 1. Global Scope：全局作用域
 2. Function Scope：函数作用域
 3. Block Scope：块级作用域
     - with（别用，有变量指向歧义，可以用解构代替）
     - try catch
-    - let、const
+    - let、const： 变量提升但初始化不提升，存在暂时性四区（TDZ）
+#### 词法环境结构 let const 声明的变量
+当进入函数的作用域块时，作用域块中通过 let、const 声明的变量，会被存放在词法环境的一个单独的区域中，
+在词法环境内部，维护了一个小型栈结构，栈底是函数最外层的变量，进入一个作用域块后，就会把该作用域块内部的变量压到栈顶；当作用域执行完成之后，该作用域的信息就会从栈顶弹出。
 
-#### 作用域链 （存疑）
+#### 作用域链
 1. 包含一组词法作用域父级，用于外部变量查找 
 2. 由多个执行上下文的**变量对象构成的链表**
 3. 当前执行上下文的作用域链由当前环境的变量对象及父级(词法)上下文的作用域链构成：current-scope = [VO, parentScopeChain]。
