--- a/javascript/闭包.md
+++ b/javascript/闭包.md
@@ -1,7 +1,7 @@
 ## [闭包](./basement/closure/closure1.js)
 1. 闭包是函数和声明该函数的词法环境的组合。
 2. 通常闭包是指那些能够访问自由变量的函数。
-3. 产生：当函数（假设函数名为outside）执行上下文被创建后，对内部所有函数进行扫描，发现内部有函数（一个或多个，假设函数名（或将匿名函数指代）为Inner）对当前作用域内变量有存在引用的情况，那么将这些所有被引用到的变量组合成一个叫做闭包的引用，?压入inner等使用变量的函数的[[Scopes]]或者说标记到该函数上?存疑。
+3. 产生：当函数（假设函数名为outside）执行上下文被创建后，对内部所有函数进行扫描，发现内部有函数（一个或多个，假设函数名（或将匿名函数指代）为Inner）对当前作用域内变量有存在引用的情况，那么将这些所有被引用到的变量组合成一个叫做闭包的引用，闭包是一个内部对象，存放在堆，只要有内部函数对其进行引用，即使当前外部函数的上下文销毁，闭包依然不会销毁。
  - 火狐： 如果函数直接在Outside内执行，那么将不对未引用变量进行优化。函数不在Outside内执行时，火狐会进行引用变量优化。
  - 谷歌： 表现为创建一个被Inner使用的Closure (Outside)
 
@@ -31,4 +31,6 @@
     - 空间换时间
 
 3. 回收： 干掉使用了闭包的那个函数 fn = null
+  - 如果引用闭包的函数是一个全局变量，那么闭包会一直存在直到页面关闭；但如果这个闭包以后不再使用的话，就会造成内存泄漏。
+  - 如果引用闭包的函数是个局部变量，等函数销毁后，在下次 JavaScript 引擎执行垃圾回收时，判断闭包这块内容如果已经不再被使用了，那么 JavaScript 引擎的垃圾回收器就会回收这块内存。
 
