newage js excution

--- a/javascript/原型.md
+++ b/javascript/原型.md
@@ -1,28 +1,22 @@
-[传送门](#总结图)
-## 一、实例
+# 原型与原型链
+
+## 实例与实例化
+让函数去模拟类的行为
 ```js
 function Car(color) {
     this.color = color;
 }
-var bmw = new Car('black');
+var bmw = new Car('black'); // bmw 是 Car 的一个实例
 console.log(bmw.color); // black
 ```
-### 实例化发生了什么？
-```js
-//创建一个基本对象
-var o = new Object(); 
+### new 实例化
+new 运算接受一个构造器和一组调用参数，其目的是 在构造器中添加属性，在构造器的 prototype 属性上添加属性：
+1. 以构造器的 prototype 属性为原型，创建新对象；
+2. 将 this 和调用参数传给构造器，执行；
+3. 如果构造器返回的是对象，则返回，否则返回第一步创建的对象。
 
-//创建内置属性__proto__并指向构造函数的prototype;
-o.__proto__ = Car.prototype;
 
-//调用构造函数来构造自身，此时this指向自身，从而获得成员变量color
-Car.call(o, 'black');
-
-//返回该对象
-return o;
-```
-
-**如果构造函数有返回值呢？**
+**构造函数的返回值**
 ```js
 function Car(color) {
     this.color = color;
@@ -33,9 +27,10 @@ function Car(color) {
 2. 简单数据类型 ：返回该实例
 3. 对象类型 ：返回这个对象类型，而不是实例
 
+
 ## 原型 prototype
-1. prototype是函数才有的属性，且每个函数都有一个prototype属性
-2. prototype是函数的**实例的原型**
+1. prototype 是函数才有的属性，且每个函数都有一个prototype属性
+2. prototype 是函数的**实例的原型**
 
 ##  \_\_proto\_\_
 1. 除null以外的js对象都具有的一个属性
@@ -47,7 +42,7 @@ bmw.__proto__ === Car.prototype //true
 ```
 
 ## constructor
-每个原型都有一个constructor属性指向关联的构造函数。
+每个原型都有一个 constructor 属性指向关联的构造函数。
 ```js
 Car.prototype.constructor === Car //true
 ```
@@ -70,8 +65,8 @@ o.__proto__ === O.prototype
 
 
 ## 总结图
-如图所示，有一点很特别 Function.\_\_proto\_\_ === Function.prototype。首先这是规范定制的，其次Function是函数，当然应该由函数原型来构造。
+如图所示，有一点很特别 Function.\_\_proto\_\_ === Function.prototype。Function 是函数，当然应该由函数原型来构造。
 
-![image](http://www.mollypages.org/tutorials/jsobj.jpg)
+![http://www.mollypages.org/tutorials/jsobj.jpg](http://www.mollypages.org/tutorials/jsobj.jpg)
 
 
