--- a/javascript/闭包.md
+++ b/javascript/闭包.md
@@ -1,36 +1,48 @@
-## [闭包](./basement/closure/closure1.js)
+# 闭包
 1. 闭包是函数和声明该函数的词法环境的组合。
-2. 通常闭包是指那些能够访问自由变量的函数。
-3. 产生：当函数（假设函数名为outside）执行上下文被创建后，对内部所有函数进行扫描，发现内部有函数（一个或多个，假设函数名（或将匿名函数指代）为Inner）对当前作用域内变量有存在引用的情况，那么将这些所有被引用到的变量组合成一个叫做闭包的引用，闭包是一个内部对象，存放在堆，只要有内部函数对其进行引用，即使当前外部函数的上下文销毁，闭包依然不会销毁。
- - 火狐： 如果函数直接在Outside内执行，那么将不对未引用变量进行优化。函数不在Outside内执行时，火狐会进行引用变量优化。
- - 谷歌： 表现为创建一个被Inner使用的Closure (Outside)
+2. 通常认为的闭包：在 JavaScript 中，根据词法作用域的规则，内部函数总是可以访问其外部函数中声明的变量，当通过调用一个外部函数返回一个内部函数后，即使该外部函数已经执行结束了，但是内部函数引用外部函数的变量依然保存在内存中，这些变量的集合称为闭包。比如外部函数是 foo，那么这些变量的集合就称为 foo 函数的闭包。
+3. 浏览器中调试的呈现
+根据第1点，只要内部函数对外部函数变量存在引用，就创建名为外部函数名的闭包对象。闭包内变量通过扫描当前词法下所有内部函数引用的外部变量得到。 
 
- ```js
+## 结合闭包的变量查找
+当前执行上下文 –> outside 函数闭包 –> 全局执行上下文
+```js
+function outside() {
+  let name = 'shown';
+  let age = 18;
+  return function() {
+    console.log(name, age);
+  };
+}
+
+let name = 'oso';
+let age = 81;
+var inner = outside();
+inner();
+```
+
+![closure-work](../image/closure-work.png)
+
+```js
   [[Scopes]]: [
-    Closure {}, // 闭包
-    // ......  根据作用域链的概念，可能存在多级闭包
-    Global {},
+  Closure {}, // 闭包
+  // ......  根据作用域链的概念，可能存在多级闭包
+  Global {},
   ]
- ```
+```
 
-### 自由变量
-被函数使用了的变量，但既不是参数也不是局部变量。
+## 注意点
+如果该闭包会一直使用，那么它可以作为全局变量而存在；如果使用频率不高，而且占用内存又比较大的话，那就尽量让它成为一个局部变量。
 
-### 实践中的闭包
-满足条件：
-1. 即使函数的上下文已经销毁，它仍然存在
-2. 引用了自由变量
-
-### 影响及注意点
 1. 时间
-    - 闭包中的变量由于已被解析并驻于内存（直到函数销毁被GC回收），所以相同逻辑下能够提高执行效率
-    - 需要多一层或者几层变量查找，增加了变量查找范围和时间
-    - 一般情况下，变量查找耗时可几乎忽略不计
-2. 空间
-    - 占用内存空间
-    - 空间换时间
+  - 闭包中的变量由于已被解析并驻于内存（直到函数销毁被 GC 回收），所以相同逻辑下能够提高执行效率。
+  - 需要多一层或者几层变量查找，增加了变量查找范围和时间，一般情况下，变量查找耗时可几乎忽略不计。
 
-3. 回收： 干掉使用了闭包的那个函数 fn = null
+2. 空间
+  - 占用内存空间。
+  - 空间换时间。
+
+3. 回收：将使用了闭包的函数置空告知 GC 下一次任务时进行清除 fn = null
   - 如果引用闭包的函数是一个全局变量，那么闭包会一直存在直到页面关闭；但如果这个闭包以后不再使用的话，就会造成内存泄漏。
   - 如果引用闭包的函数是个局部变量，等函数销毁后，在下次 JavaScript 引擎执行垃圾回收时，判断闭包这块内容如果已经不再被使用了，那么 JavaScript 引擎的垃圾回收器就会回收这块内存。
 
