--- a/javascript/原型.md
+++ b/javascript/原型.md
@@ -27,6 +27,16 @@ function Car(color) {
 2. 简单数据类型 ：返回该实例
 3. 对象类型 ：返回这个对象类型，而不是实例
 
+### 哪些可以new
+函数类型 | new 
+-|-
+普通函数| 实例
+类 | 实例
+类中的方法| err（not a constructor）
+箭头函数| err
+生成器 | err
+异步（普通、箭头、生成器） | err
+
 
 ## 原型 prototype
 1. prototype 是函数才有的属性，且每个函数都有一个prototype属性
