--- a/javascript/执行上下文.md
+++ b/javascript/执行上下文.md
@@ -98,6 +98,17 @@ foo();
 1. 在一个执行上下文中，变量先从词法环境查找，若无，再到变量环境查找。
 2. 若当前变量环境无法查到，则根据作用域链，按照词法作用域的规则到外部执行上下文内进行查找（重复步骤1）。
 
+### 具有名称的函数表达式
+函数名称仅作为函数体（作用域内）的本地变量（仅可在函数体内且只读）。
+```js
+var a = 0;
+(function a() {
+    a = 10; // 函数名 a 只读，变量赋值无效。
+    console.log(a); // 函数 a 的表达式
+})()
+
+```
+
 ## [闭包](./闭包.md)。
 
 ## [this](./this.md)
