--- a/javascript/执行上下文.md
+++ b/javascript/执行上下文.md
@@ -38,7 +38,7 @@ ES6 支持块级作用域，当执行到代码块时，如果代码块中有 let
 
 在词法环境内部，维护了一个小型栈结构，用于块级作用域中变量（let、const）的管理。  
 
-其中，栈底是块外层的变量（let、const），当进入代码块后，就会把该块内部的变量压入栈顶；当该块执行完毕后，其作用域的信息就会从栈顶弹出。  
+其中，栈底是块外层的变量（let、const），当进入代码块后，就会把该块内部的变量压入栈顶；当该块执行完毕后，其作用域的信息就会从栈顶弹出，块与块是隔离的。  
 
 下面的示例展示了在函数 foo 执行时的执行上下文中的词法环境和变量环境，以及块级作用域内变量在该执行上下文中的变量查找关系。
 
@@ -56,7 +56,7 @@ function foo(){
         console.log(a); // 1 当前词法环境无，那么从块外部的变量环境查找
         console.log(b); // 3 先从当前词法环境查找
     }
-    console.log(b); // 2 无法访问块，直接变量环境查找
+    console.log(b); // 2 无法访问块，从词法环境底部找到 b
     console.log(c); // 4 变量环境
     console.log(d); // Uncaught ReferenceError: d is not defined 无法访问块，且变量环境及全局中也未定义
 }   
