--- a/javascript/js高程note/正则.md
+++ b/javascript/js高程note/正则.md
@@ -1,32 +1,106 @@
-### 非贪婪匹配
-
-待匹配字符后跟随一个?
-比如 ?? +? *? {m,n}? {m,}? 等
-/^(.+?)\1+$/  字符串去重
+# 正则
 
 ```js
-var str = 'aaab';
-var reg = /a+?b/;
-str.match(reg); //["aaab", index: 0, input: "aaab", groups: undefined]
+// 互转
+let reg = /\d+/;
+let source = reg.source;
+let reg2 = new RegExp(source); // /\d+/
+
+// 如果是直接 new 字符串 需要转义
+new RegExp("\\d+")
+
+// 动态正则只能由构造函数构造
+new RegExp("^\\d"+ varia +"$")
 ```
-并没有按照想象中只匹配`'ab'`，正则表达式的模式匹总是会寻找字符串中第一个可能的匹配位置
+
+## 常用
+```js
+* 0到多次
++ 1到多次
+? 0或1次
+{n} n次
+{n,} n到多次
+{n, m} n到m次 
 
 
-### 选择、分组、引用
+\ 转义符
+. 除了\n 外任意字符
+^ 匹配开始
+$ 匹配结束
+
+\d 0-9
+\D 非0-9
+\w 数字字母下划线
+\s 空白字符 包含空格制表符换页符等
+\t 制表符 tab=》 4个空格
+\b 单词边界
+
+x|y x或y
+[xyz] xyz中的一个
+[^xy] 非x或y
+[a-z] a-z范围
+
+
+
+()分组
+(?:) 只匹配不捕获
+(?=) 正向预查
+(?!) 负向预查
+
+
+// 修饰符
+i 不区分大小写
+g 全局 找到所有匹配
+m 多行匹配 出了匹配整个字符串的开始和结尾外，还能匹配每行的开始和结尾
+
+```
+
+### | 的优先级混乱
+一般搭配() 以保证优先级
+
+### [] 中出现的字符
+特殊符号一般指代本身的含义  
+
+```js
+/^[+]/ 匹配 +
+/^[\d]/ 匹配数字 保留含义
+/^[\\d]/ 匹配 d
+/^[18]/ 1、8 不存在多位数，都是独立的字符
+/^[10-29]/ 1、 0-2、 9。 - 保留了含义
+```
+
+## 捕获
+RegExp.prototype
+  - lastIndex： 匹配的起始索引位置
+  - exec： [捕获结果,捕获的起始索引,原始字符串] 执行一次默认从当前索引处捕获一个，惰性捕获（一般情况下lastIndex 永远从 0 开始）
+  - test： 测试当前是否可以匹配
+String.prototype
+  - match  /g 直接匹配出所有结果，但是若有分组，无法获取分组内的匹配信息
+  - replace
+
+```bash
+String.prototype 上的方法 总是会将 lastIndex 置为 0 进行匹配
+
+当使用全局匹配（g）时，需要注意匹配前将 lastIndex 重置为0
+因为执行一次，lastIndex就会被设置为紧挨着匹配子串的字符位置，以便下一次调用时直接从该位置继续匹配(类似查找中的“下一个”)
+
+```
+
+## 选择、分组、引用
 1. “ | ”
 `/\a|ab/` 匹配ab时 只能匹配第一个字符
 选择项的匹配次序是从左至右，一旦匹配则忽略后面
 
 2. “ () ”
  - 把单独的项组合成子表达式
- - 可以用个`\`加数字来引用正则前部的表达式，这个数字由参与计数的左括号的位置决定
+ - 可以用个`\`加数字来引用正则前部的表达式，表示和该表达式匹配的一样的结果值，这个数字由参与计数的左括号的位置决定
  - 引用的是匹配后的文本！
 
 ```js
 // 可以使用`\2`代表(script);
 var reg1 = /(Java(script)?)\sis\s(good\w*)/
 
-// \1 引用了(['"]) 因此匹配两个引号都是单引号或者都是双引号
+// \1 引用了(['"])匹配的结果 因此匹配两个引号都是单引号或者都是双引号
 var reg2 = /(['"])^['"]*\1/
 
 // reg3 无效 不允许双引号括起内容中有单引号，反之亦然 
@@ -37,7 +111,37 @@ var reg4 = /(Java(?:script)?)\sis\s(good\w*)/
 ```
 
 
-### 指定匹配的位置
+## 非贪婪匹配
+正则捕获时默认是贪婪的
+
+```bash
+? 左侧是非量词元字符时 代表量词元字符
+? 左侧是量词元字符时 非贪婪
+```
+待匹配量词元字符后跟随一个?
+比如 ?? +? *? {m,n}? {m,}? 等
+
+```js
+// 字符串去重
+var str = '我...我..';
+var reg = /\./gi;
+str = str.replace(reg,''); 
+console.log(str)//我我
+reg = /(.)\1+/gi;
+str = str.replace(reg,'$1');
+console.log(str)//我
+```
+
+```js
+var str = 'aaab';
+var reg = /a+?b/;
+str.match(reg); //["aaab", index: 0, input: "aaab", groups: undefined]
+```
+并没有按照想象中只匹配`'ab'`，正则表达式的模式匹总是会寻找字符串中第一个可能的匹配位置
+
+
+
+## 指定匹配的位置
 
  锚元素
 以^开头 $结尾
@@ -55,7 +159,7 @@ var reg3 = /\Bscript/
 ```
 
 
-#### 断言
+## 断言
 
 1. 
 `x(?=y)`
@@ -85,10 +189,6 @@ x只有在y后面才能匹配
 x只有不在y后面才能匹配
 
 
-### 修饰符
-i 不区分大小写
-g 全局 找到所有匹配
-m 多行匹配 出了匹配整个字符串的开始和结尾外，还能匹配每行的开始和结尾
 
 
 
@@ -97,9 +197,10 @@ String
 1. search 传入正则（如果是字符串则会用RegExp构造）返回第一个匹配的起始位置，
 2. replace 
 第一个参数是正则（如果是字符串则直接使用该字符串） 
-第二个参数是指定替换的字符串 也可以是执行替换的函数
+第二个参数是指定替换的字符串 也可以是执行替换的函数（exec()的结果，匹配到几次执行几次）
 对于子表达式的分组() 可以用$n的方式引用 n为次序
 ```js
+// 替换双引号
 var str = '小狗喊了一声"汪汪"然后跑了';
 var reg = /"([^"]*)"/g;
 str.replace(reg, '“$1”'); // "小狗喊了一声“汪汪”然后跑了"
@@ -113,22 +214,3 @@ var reg = /(Java(script)?)\sis\s(good\w*)/
 4. split
 也可以传入正则进行分割
 
-
-### 动态创建正则 RegExp对象
-```js
-// 需要对\进行转义，\ 替换成 \\
-new RegExp('\\d{5}', 'g')
-```
-
-RegExp.prototype.lastIndex 下次匹配开始的字符串索引位置
-
-#### 执行匹配
-
-RegExp.prototype.exec() 执行一次匹配
-RegExp.prototype.test() 测试当前是否可以匹配
-
-当使用全局匹配（g）时，需要注意匹配前将lastIndex重置为0
-因为执行一次，lastIndex就会被设置为紧挨着匹配子串的字符位置，以便下一次调用时直接从该位置继续匹配
-(类似查找中的“下一个”)
-
-而string上的方法 总是会将lastIndex置为0进行匹配
