--- a/javascript/继承.md
+++ b/javascript/继承.md
@@ -16,6 +16,7 @@ var Male = function(name) {
     Human.call(this, name);
 }
 //2.建立原型，使用Object.create创建父类原型副本
+// => {}.__proto__ = Human.prototype
 var __prototype = Object.create(Human.prototype); 
 //3.修正构造函数为子类
 //构造函数即"本身"。使用constructor属性来测试对象的类型
